[metadata]
name = tufw
version = 1.0.0
author = Alessandro Campolo
author_email = campoloalex@gmail.com
description = Ufw terminal frontend based on dialog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a13ssandr0/tufw
project_urls =
    Bug Tracker = https://github.com/a13ssandr0/tufw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
install_requires =
    pythondialog

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tufw = tufw.__init__:main